fix framework7 styling bug by forcing a class to be applied on forms & add spacing to exchange radio buttons

--- a/src/assets/custom.css
+++ b/src/assets/custom.css
@@ -20,3 +20,7 @@ XXX: for higher resolution devices, could use the large size image
     width: 100%;
     max-width: 480px;
 }
+
+.push-radio .item-title {
+    margin-top: 7px;
+}
